--- a/website/templates/website/extends/base.html
+++ b/website/templates/website/extends/base.html
@@ -4,15 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>ERICO ELECTRONICS</title>
     <link rel="stylesheet" href="{% static 'website/bootstrap.min.css' %}">
+    <link rel="stylesheet" href="{% static 'website/style.css' %}">
 </head>
 <body>
-    This is base
     {% block base %}
         
     {% endblock base %}
 
     <script src="{% static 'website/bootstrap.bundle.min.js' %}"></script>
+    <script src="{% static 'website/script.js' %}"></script>
 </body>
 </html>
