Some minor fixes

--- a/website/templates/website/sales.html
+++ b/website/templates/website/sales.html
@@ -2,10 +2,6 @@
 
 {% block structure %}
 
-This is the home page
-
-{% for phone in phones %}
-    {{ phone }}
-{% endfor %}
+<p>This is the sales page</p>
     
 {% endblock structure %}
