--- a/website/templates/website/extends/base.html
+++ b/website/templates/website/extends/base.html
@@ -4,7 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ERICO ELECTRONICS</title>
+    <title>ERICO ELECTRONICS {% if tab %}
+        - {{ tab }}
+    {% endif %}</title>
     <link rel="stylesheet" href="{% static 'website/bootstrap.min.css' %}">
     <link rel="stylesheet" href="{% static 'website/style.css' %}">
 </head>
