Added a phone cart

--- a/website/static/website/style.css
+++ b/website/static/website/style.css
@@ -7,7 +7,8 @@
 }
 
 .phone{
-    background-color: #b4e0ff;
+    /* background-color: #b4e0ff; */
+    background-color: #b4e0ff90;
 }
 
 .table-sm{
