--- a/website/templates/website/home.html
+++ b/website/templates/website/home.html
@@ -2,6 +2,7 @@
 
 {% block structure %}
 
-{% include 'website/components/phonesTable.html' %}
+<!-- {% include 'website/components/phonesTable.html' %} -->
+{% include 'website/components/phonesCard.html' %}
     
 {% endblock structure %}
