--- a/website/templates/website/components/phoneCards.html
+++ b/website/templates/website/components/phoneCards.html
@@ -10,7 +10,7 @@
 
             <p class="h5 text-center"><strong>{{ phone.name }}</strong> - <small class="text-body-primary">{{ phone.model }}</small></p>
             <p class="small pb-0 mb-0">
-                {{ phone.company }} {{ phone.name }} <small>({{ phone.model }})</small>, 
+                {{ phone.company }}'s {{ phone.name }} <small>({{ phone.model }})</small>, 
                 Memory <strong>{{ phone.memory }}</strong>, 
                 Cameras <small>{{ phone.cameras }}</small> and a {{ phone.screen }},
                 with a <strong>{{ phone.battery }}mah</strong> battery.
