Small tweaks on the UI

--- a/website/templates/website/components/phoneCards.html
+++ b/website/templates/website/components/phoneCards.html
@@ -6,7 +6,7 @@
             <div class="phone-image">
 
             </div>
-            <div class="h5 text-center"><strong>{{ phone.name }}</strong> - <small class="text-body-primary">{{ phone.model }} Case</small> <span class="float-end badge rounded-pill bg-secondary">{{ phone.quantity }}</span></div>
+            <div class="h5 text-center"><strong>{{ phone.name }}</strong> - <small class="text-body-primary">{{ phone.model }}</small> <span class="float-end badge rounded-pill bg-secondary">{{ phone.quantity }}</span></div>
 
             <p class="h5 text-center"><strong>{{ phone.name }}</strong> - <small class="text-body-primary">{{ phone.model }}</small></p>
             <p class="small pb-0 mb-0">
