--- a/website/templates/website/components/phonesTable.html
+++ b/website/templates/website/components/phonesTable.html
@@ -1,5 +1,5 @@
 <div class="mt-2">
-    <table class="table table-sm">
+    <table class="table table-sm table-striped table-hover table-bordered phone">
         <thead>
             <tr>
                 <th></th>
@@ -21,8 +21,8 @@
                 <td>{{ phone.discountPrice }}</td>
                 <td>{{ phone.quantity }}</td>
                 <td>
-                    <button class="btn btn-sm btn-outline-success">OPEN</button>
-                    <button class="btn btn-sm btn-outline-success">SELL</button>
+                    <button class="btn btn-sm btn-outline-primary">view</button>
+                    <button class="btn btn-sm btn-outline-success">sell</button>
                 </td>
             </tr>
 
