--- a/website/templates/website/components/protectorCards.html
+++ b/website/templates/website/components/protectorCards.html
@@ -9,7 +9,7 @@
 
             </div>
             <div class="h5 text-center"><strong>{{ protector.phone.name }}</strong> - 
-                <small class="text-body-primary">{{ protector.type }} Case</small> 
+                <small class="text-body-primary">{{ protector.type }} Protector</small> 
                 <span class="float-end badge rounded-pill bg-dark">{{ protector.quantity }}</span></div>
             <p class="small pb-0 mb-0">
                 {% if protector.location %}
