--- a/website/templates/website/includes/navbar.html
+++ b/website/templates/website/includes/navbar.html
@@ -11,6 +11,14 @@
             
 
             <form class="d-flex m-auto 2 form" role="search">
+                <select name="" class="form-control mx-2" id=""> 
+                    <option value="">--- ---- ---</option>
+                    <option value="">Phones</option>
+                    <option value="">Protectors</option>
+                    <option value="">Cases</option>
+                    <option value="">Spares</option>
+
+                </select>
                 <input class="form-control me-2 search" type="search" placeholder="Search" aria-label="Search">
                 <button class="btn btn-outline-success" type="submit">Search</button>
             </form>
@@ -43,7 +51,7 @@
                     </ul>
                 </li>
                 <li class="nav-item">
-                    <a data-bs-toggle="offcanvas" href="#offcanvasExample" role="button" aria-controls="offcanvasExample"  class="nav-link"  aria-disabled="true">Cart</a>
+                    <a data-bs-toggle="offcanvas" href="#cart" role="button" aria-controls="offcanvasExample"  class="nav-link"  aria-disabled="true">Cart</a>
                 </li>
             </ul>
 
@@ -56,9 +64,9 @@
 <!-- 
     data-bs-scroll="true"
  -->
-<div class="offcanvas offcanvas-end"   tabindex="-1" id="offcanvasExample" aria-labelledby="offcanvasExampleLabel">
-    <div class="offcanvas-header">
-      <h5 class="offcanvas-title" id="offcanvasExampleLabel">Offcanvas</h5>
+<div class="offcanvas offcanvas-end"   tabindex="-1" id="cart" aria-labelledby="offcanvasExampleLabel">
+    <div class="offcanvas-header phone">
+      <h5 class="offcanvas-title" id="offcanvasExampleLabel">CART</h5>
       <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
     </div>
     <div class="offcanvas-body">
