--- a/website/templates/website/components/protectorCards.html
+++ b/website/templates/website/components/protectorCards.html
@@ -10,7 +10,8 @@
             </div>
             <div class="h5 text-center"><strong>{{ protector.phone.name }}</strong> - 
                 <small class="text-body-primary">{{ protector.type }} Protector</small> 
-                <span class="float-end badge rounded-pill bg-dark">{{ protector.quantity }}</span></div>
+                <span class="float-end badge rounded-pill bg-secondary"><small>{{ protector.quantity }} pcs</small></span>
+            </div>
             <p class="small pb-0 mb-0">
                 {% if protector.location %}
                 <span class="m-auto text-muted"> {{ protector.location }}</span>
