Started on forms

--- a/website/templates/website/includes/navbar.html
+++ b/website/templates/website/includes/navbar.html
@@ -44,6 +44,7 @@
                     </a>
                     <ul class="dropdown-menu">
                         <li><a class="dropdown-item" href="#">Some</a></li>
+                        <li><a class="dropdown-item" href="#">Products</a></li>
                         <li>
                             <hr class="dropdown-divider">
                         </li>
