--- a/website/templates/website/includes/navbar.html
+++ b/website/templates/website/includes/navbar.html
@@ -71,18 +71,66 @@
       <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
     </div>
     <div class="offcanvas-body">
-      <div>
-        Some text as placeholder. In real life you can have the elements you have chosen. Like, text, images, lists, etc.
-      </div>
-      <div class="dropdown mt-3">
-        <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown">
-          Dropdown button
-        </button>
-        <ul class="dropdown-menu">
-          <li><a class="dropdown-item" href="#">Action</a></li>
-          <li><a class="dropdown-item" href="#">Another action</a></li>
-          <li><a class="dropdown-item" href="#">Something else here</a></li>
-        </ul>
-      </div>
+
+        <table class="table table-sm">
+            <thead>
+                <tr>
+                    <th>ITEM</th>
+                    <th>QUANTITY</th>
+                    <th>AMOUNT</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Iphone 8</td>
+                    <td>2</td>
+                    <td>Ksh 66,000</td>
+                </tr>
+                <tr>
+                    <td>Iphone 8 case</td>
+                    <td>2</td>
+                    <td>Ksh 500</td>
+                </tr>
+                <tr>
+                    <td>Iphone 8 protector</td>
+                    <td>2</td>
+                    <td>Ksh 800</td>
+                </tr>
+                <tr>
+                    <td colspan="2"> <center><strong>TOTAL</strong></center></td>
+                    <td><strong>Ksh 67,300</strong></td>
+                </tr>
+                
+            </tbody>
+        </table>
+
+        <br>
+        <br>
+
+        <div class="card phone">
+            <center><p>HELD</p></center>
+
+            <div>
+                
+            </div>
+
+        </div>
+
+        <br>
+        <br>
+
+        <center>
+            <div class="btn-group form-group" role="group" aria-label="Basic example">
+                <button type="button" class="btn btn-info" data-bs-dismiss="offcanvas">CANCEL</button>
+                <button type="button" class="btn btn-primary">HOLD</button>
+                <button type="button" class="btn btn-info">CHECKOUT</button>
+              </div>
+        </center>
+
+
+
+
+
+
     </div>
   </div>
