Upload b4 starting on products as the table

--- a/website/templates/website/includes/navbar.html
+++ b/website/templates/website/includes/navbar.html
@@ -103,29 +103,27 @@
                 
             </tbody>
         </table>
+        <center class="mt-4">
+            <div class="btn-group form-group" role="group" aria-label="Basic example">
+                <!-- <button type="button" class="btn btn-sm btn-info" data-bs-dismiss="offcanvas">CANCEL</button> -->
+                <button type="button" class="btn btn-sm btn-info">CLEAR</button>
+                <button type="button" class="btn btn-sm btn-primary">HOLD</button>
+                <button type="button" class="btn btn-sm btn-info">CHECKOUT</button>
+              </div>
+        </center>
 
-        <br>
-        <br>
+        <hr>
+
+
 
         <div class="card phone">
-            <center><p>HELD</p></center>
+            <center><p>HELD LISTS</p></center>
 
             <div>
                 
             </div>
 
         </div>
-
-        <br>
-        <br>
-
-        <center>
-            <div class="btn-group form-group" role="group" aria-label="Basic example">
-                <button type="button" class="btn btn-info" data-bs-dismiss="offcanvas">CANCEL</button>
-                <button type="button" class="btn btn-primary">HOLD</button>
-                <button type="button" class="btn btn-info">CHECKOUT</button>
-              </div>
-        </center>
 
 
 
