Added some more pages to work on. eg Products page

--- a/website/templates/website/extends/base.html
+++ b/website/templates/website/extends/base.html
@@ -14,12 +14,15 @@
             document.getElementById('search').focus();
         }
     </script>
+    <!-- Alpine js -->
+    <script src="{% static 'website/alpine3.js' %}"></script>
 </head>
 <body>
     {% block base %}
         
     {% endblock base %}
 
+    
     <script src="{% static 'website/bootstrap.bundle.min.js' %}"></script>
     <script src="{% static 'website/script.js' %}"></script>
 </body>
