Adding of products

--- a/website/templates/website/extends/structure.html
+++ b/website/templates/website/extends/structure.html
@@ -3,6 +3,7 @@
 {% block base %}
 {% include 'website/includes/navbar.html' %}
 <div class="container">
+    {% include 'website/includes/alerts.html' %}
     {% block structure %}
     
     {% endblock structure %}
