--- a/website/templates/website/includes/navbar.html
+++ b/website/templates/website/includes/navbar.html
@@ -65,8 +65,8 @@
                         Settings
                     </a>
                     <ul class="dropdown-menu">
-                        <li><a class="dropdown-item {% if subtab == 'contact' %}active{% endif %}" href="{% url 'contact-page' %}">Contacts</a></li>
-                        <li><a class="dropdown-item {% if subtab == 'products' %}active{% endif %}" href="{% url 'products-page' %}">Products</a></li>
+                        <li><a class="dropdown-item {% if subtab == 'contact' %}active{% endif %}" href="{% url 'contacts-page' %}">Contacts</a></li>
+                        <li><a class="dropdown-item {% if subtab == 'products' %}active{% endif %}" href="{% url 'products-page' %}">Stock</a></li>
                         <li><hr class="dropdown-divider"></li>
                         
                         <li><hr class="dropdown-divider"></li>
